chore: add CLAUDE.md + backup scaffolding (Milestone A)
- Add CLAUDE.md as single source of truth for project docs
- Add backup scripts (backup-db.sh, restore-db.sh, snapshot.sh, milestone.sh)
- Add docker-compose.yml for local Postgres development
- Add .env.example with all required environment variables
- Update .gitignore to exclude backups and .env files
- Add npm scripts for backup/snapshot/milestone operations
- Rename project to glass-quizzes with version 0.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Backups (keep .gitkeep)
+/backups/*
+!/backups/.gitkeep
+
+# Database
+*.sql
+*.sql.gz
+
+# Server build
+/server/dist
+
+# Supabase local
+.supabase
