feat: add Telegram bot and API server (Milestone B)
Server infrastructure:
- grammY bot with inline query support
- Hono API server with CORS and logging
- initData validation middleware for Telegram WebApp auth
- Supabase client integration

Bot features:
- /start command opens Mini App with deep link support
- /help command with inline mode instructions
- Inline query handler:
  - Daily quiz (featured)
  - Random quiz
  - Profile sharing
  - Search by title/description
- Inline results with web_app buttons and share actions

API endpoints:
- GET /health - health check
- GET /api/quizzes - list published quizzes
- GET /api/quizzes/daily - featured quiz
- GET /api/quizzes/:id - quiz details
- POST /api/auth/validate - validate initData
- POST /api/attempts/start - start quiz attempt
- POST /api/shares - log share event
- POST /api/bot/webhook - Telegram webhook

Database:
- Migration for verdicts table (score→verdict mapping)
- Migration for shares table (viral metrics tracking)
- get_verdict() function for dynamic verdict lookup

Utilities:
- telegram.ts: initData validation, start_param parsing
- supabase.ts: quiz queries (published, daily, random)

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,15 @@
 # Copy this file to .env and fill in your values
 
 # ===================
-# SUPABASE (existing)
+# SUPABASE
 # ===================
+# Frontend uses VITE_ prefix
 VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key
+VITE_SUPABASE_PUBLISHABLE_KEY=your-anon-key
+
+# Server uses service role key for bypassing RLS when needed
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_KEY=your-service-role-key
 
 # ===================
 # DATABASE (local dev)
