--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
+    "server": "npm run dev --prefix server",
+    "server:install": "npm install --prefix server",
+    "server:build": "npm run build --prefix server",
     "backup": "./scripts/backup-db.sh",
     "snapshot": "./scripts/snapshot.sh",
     "milestone": "./scripts/milestone.sh",
