--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,11 @@ PORT=3001
 NODE_ENV=development
 
 # ===================
+# API (for frontend)
+# ===================
+VITE_API_URL=http://localhost:3001
+
+# ===================
 # OPTIONAL
 # ===================
 # Analytics, logging, etc.
