feat: Add quiz moderation system and real data integration
- Add quiz moderation workflow:
  - status field (draft/pending/published/rejected)
  - Admin notifications via Telegram bot
  - approve/reject callback handlers

- Add image upload for quizzes:
  - Supabase Storage bucket 'quiz-images'
  - useImageUpload hook with validation
  - CreateQuizScreen with image preview

- Replace mock data with real database queries:
  - useLeaderboard hook with RPC functions
  - useUserStats hook for profile stats
  - CreatorsScreen uses real popcorn leaderboard
  - LeaderboardScreen uses real data

- Add SQL migrations:
  - Quiz moderation fields
  - Storage bucket + policies
  - Leaderboard RPC functions (get_leaderboard_by_*)
  - User stats RPC function (get_user_stats)

--- a/.env.example
+++ b/.env.example
@@ -25,24 +25,24 @@ POSTGRES_DB=glass_quizzes
 # TELEGRAM BOT
 # ===================
 # Get from @BotFather
-TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
-TELEGRAM_BOT_USERNAME=YourBotUsername
+TELEGRAM_BOT_TOKEN=8518347500:AAGTmkn6qIokzi6KwfDVrieBqpzMOtxFzHE
+TELEGRAM_BOT_USERNAME=QuipoBot
 
 # Webhook URL (production only)
-TELEGRAM_WEBHOOK_URL=https://your-domain.com/api/bot/webhook
-TELEGRAM_WEBHOOK_SECRET=random-secret-string
+TELEGRAM_WEBHOOK_URL=https://quipobot.netlify.app/
+TELEGRAM_WEBHOOK_SECRET=dacrime-secret-legend
 
 # ===================
 # TELEGRAM MINI APP
 # ===================
 # Mini App URL for inline buttons
-VITE_MINI_APP_URL=https://t.me/YourBotUsername/app
+VITE_MINI_APP_URL=https://t.me/QuipoBot?startapp=
 
 # ===================
 # ADMIN ACCESS
 # ===================
 # Comma-separated Telegram user IDs with admin access
-ADMIN_TELEGRAM_IDS=123456789,987654321
+ADMIN_TELEGRAM_IDS=47284045
 
 # ===================
 # SERVER
