feat: 1-click sharing with direct switchInlineQuery
- sharePersonalityTestResult/shareQuizResult now use switchInlineQuery directly
- Opens chat selector immediately, no redirect to bot
- Fallback to bot link if switchInlineQuery unavailable
- Updated Netlify URL to zingy-quokka-ea065f.netlify.app

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ TELEGRAM_WEBHOOK_SECRET=dacrime-secret-legend
 # ===================
 # TELEGRAM MINI APP
 # ===================
-VITE_MINI_APP_URL=https://endearing-taiyaki-03c7aa.netlify.app
+VITE_MINI_APP_URL=https://zingy-quokka-ea065f.netlify.app
 
 # ===================
 # ADMIN ACCESS
