--- a/.env.example
+++ b/.env.example
@@ -28,15 +28,15 @@ POSTGRES_DB=glass_quizzes
 TELEGRAM_BOT_TOKEN=8518347500:AAGTmkn6qIokzi6KwfDVrieBqpzMOtxFzHE
 TELEGRAM_BOT_USERNAME=QuipoBot
 
-# Webhook URL (production only)
-TELEGRAM_WEBHOOK_URL=https://quipobot.netlify.app/
-TELEGRAM_WEBHOOK_SECRET=dacrime-secret-legend
+# Webhook URL (production only) — тот же домен что и Mini App
+TELEGRAM_WEBHOOK_URL=https://YOUR-NETLIFY-SITE.netlify.app/
+TELEGRAM_WEBHOOK_SECRET=your-secret
 
 # ===================
 # TELEGRAM MINI APP
 # ===================
-# Mini App URL for inline buttons
-VITE_MINI_APP_URL=https://t.me/QuipoBot?startapp=
+# URL твоего Netlify-сайта (после переезда — подставь новый)
+VITE_MINI_APP_URL=https://YOUR-NETLIFY-SITE.netlify.app
 
 # ===================
 # ADMIN ACCESS
