--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ TELEGRAM_WEBHOOK_SECRET=dacrime-secret-legend
 # ===================
 # TELEGRAM MINI APP
 # ===================
-VITE_MINI_APP_URL=https://zingy-quokka-ea065f.netlify.app
+VITE_MINI_APP_URL=https://glass-quizzes.vercel.app
 
 # ===================
 # ADMIN ACCESS
