--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,14 @@ NODE_ENV=development
 VITE_API_URL=http://localhost:3001
 
 # ===================
+# OPENAI (AI генерация квизов/тестов)
+# ===================
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o
+# Цена в Telegram Stars за 1 кредит (1 генерация = 3 варианта)
+AI_GENERATION_PRICE_STARS=100
+
+# ===================
 # OPTIONAL
 # ===================
 # Analytics, logging, etc.
