chore: remove bot token from env example

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ POSTGRES_DB=glass_quizzes
 # TELEGRAM BOT
 # ===================
 # Get from @BotFather
-TELEGRAM_BOT_TOKEN=8518347500:AAGTmkn6qIokzi6KwfDVrieBqpzMOtxFzHE
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 TELEGRAM_BOT_USERNAME=QuipoBot
 
 # Webhook URL (production only) — тот же домен что и Mini App
